kubernetes/day02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathnex-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: pathnex-app

  template:
    metadata:
      labels:
        app: pathnex-app

    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
