kubernetes/day12-hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathnex-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pathnex-web-app
  template:
    metadata:
      labels:
        app: pathnex-web-app
    spec:
      containers:
        - name: web
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
