kubernetes/day13-nginx-config-secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathnex-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pathnex-nginx
  template:
    metadata:
      labels:
        app: pathnex-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-secret
          secret:
            secretName: nginx-secret
