kubernetes/day08-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pathnex-service
spec:
  type: NodePort
  selector:
    app: pathnex-app
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30007
