kubernetes/day14-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pathnex-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pathnex.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pathnex-service
                port:
                  number: 80
